fix: modal max-height + custom scrollbar
The modals now have a max-height and  a scrollbar into `modal__body`. 
When the content was _REALLY BIG_ the resizing triggered the main scrollbar *=>* Now it'll trigger a custom scrollbar into the modal when over `max-height: 750px`

--- a/app/styles/components/_modals.scss
+++ b/app/styles/components/_modals.scss
@@ -475,6 +475,26 @@
     }
 }
 
+// .modal__scroll {
+//   .modal {
+//     .modal__body {
+//       height: 700px;
+//       overflow-y: scroll;
+//       &::-webkit-scrollbar {
+//           width: 6px;
+//         }
+//       &::-webkit-scrollbar-thumb {
+//           background-color: $black;
+//       }
+//       &::-webkit-scrollbar-track {
+//           background-color: transparent;
+//           border-left: 1px solid $grey-light;
+//           border-bottom: 1px solid $grey-light;
+//       }
+//     }
+//   }
+// }
+
 .modal {
     text-align: left;
     height: 100%;
@@ -540,6 +560,19 @@
 
     .modal__body {
         padding: 30px;
+        overflow-y: auto;
+        max-height: 750px;
+        &::-webkit-scrollbar {
+            width: 6px;
+          }
+        &::-webkit-scrollbar-thumb {
+            background-color: $black;
+        }
+        &::-webkit-scrollbar-track {
+            background-color: transparent;
+            border-left: 1px solid $grey-light;
+            border-bottom: 1px solid $grey-light;
+        }
 
         .modal__parraph {
             margin-bottom: 17px;
